# EMSUGI

./: .env-example  .gitignore  DOCKER_README.md  Dockerfile  README.md  analysis.ipynb  app.py  database.py  evaluate.ipynb  fetch_alerts.py  generate.py  launch.py  pyproject.toml  report_general.py  requirements-dev.txt  requirements-nohash.txt  requirements.txt
Backend/: README.md  launch.py  pyproject.toml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/muhammadfiaz/emsug/: MainActivity.kt
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/linux/: CMakeLists.txt  my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
modules/: __init__.py  async_worker.py  db.py  download.py  fetch_alerts.py  generate.py  process.py  router.py
modules/api/: __init__.py  analysis_data.py  cancel_disabled.py  cancel_process.py  loading.py  regenerate.py
modules/routes/: __init__.py  analysis_page.py  index_page.py  license_page.py  notice_page.py  records_page.py  report_page.py  reports_page.py
modules/utils/: check_for_cancel.py  create_database.py  generate_analysis_charts.py  generate_gemini_report.py
static/: styles.css
templates/: analysis.html  history.html  index.html  license.html  notice.html  records.html  report.html  reports.html
